09-complete-infra-using-only-modules(EC2,VPC,ASG,ALB,RDS)/modules/ASG/security-group.tf
resource "aws_security_group" "my-SG" {
  vpc_id = var.vpc_id
  tags = {
    Name = "SG-for-ASG"
  }
}

resource "aws_vpc_security_group_ingress_rule" "ingress-80" {
  cidr_ipv4         = "0.0.0.0/0"
  security_group_id = aws_security_group.my-SG.id
  from_port         = 80
  to_port           = 80
  ip_protocol       = "tcp"
}
resource "aws_vpc_security_group_ingress_rule" "ingress-22" {
  cidr_ipv4         = "0.0.0.0/0"
  security_group_id = aws_security_group.my-SG.id
  from_port         = 22
  to_port           = 22
  ip_protocol       = "tcp"
}

resource "aws_vpc_security_group_egress_rule" "egress-all" {
  cidr_ipv4         = "0.0.0.0/0"
  security_group_id = aws_security_group.my-SG.id
  ip_protocol       = "-1"
}
